--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.7
   talker_flutter: ^4.6.3
   auto_route: ^10.0.1
+  firebase_core: ^3.12.1
   # cupertino_icons: ^1.0.8
   # flutter_svg: ^2.0.17
   # dio: ^5.8.0+1
